--- a/croquet.properties
+++ b/croquet.properties
@@ -1,2 +1,12 @@
 resetUrl = http://localhost.localdomain:8080/croquet/index.html#resetPassword
 verifyUrl  = http://localhost.localdomain:8080/croquet/harwellcroquet/verify
+
+mail.smtp.host = secureuk41.sgcpanel.com
+mail.smtp.socketFactory.port = 465
+mail.smtp.port= 465
+mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+mail.smtp.auth = true
+
+from.desc = Harwell Croquet Club
+from.email = fisher@harwellcroquet.org.uk
+from.password = guess
